[gd_scene load_steps=5 format=3 uid="uid://4p6syw3ii3v0"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_ggul3"]
[ext_resource type="FontFile" uid="uid://b0jih4ix5k4ay" path="res://assets/backgrounds/street-fighter-alpha-2-large.ttf" id="1_vs1ra"]
[ext_resource type="Texture2D" uid="uid://ct5roy8nwi10x" path="res://assets/UI/Startscreen0616.png" id="3_lodql"]

[sub_resource type="Theme" id="Theme_cpu03"]
default_font = ExtResource("1_vs1ra")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_cpu03")
script = ExtResource("1_ggul3")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(385.39, 216.592)
scale = Vector2(1.8034, 1.8034)
texture = ExtResource("3_lodql")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.495
anchor_top = 0.488
anchor_right = 0.495
anchor_bottom = 0.5
offset_left = -18.16
offset_top = 80.184
offset_right = 51.84
offset_bottom = 208.409
pivot_offset = Vector2(31.755, 0)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Info" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Info"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Info" to="." method="_on_info_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
